# doc-simplifier

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.local.sh  init.sql  nginx.conf  pyproject.toml  wait-for-db.sh
src/: middleware.py
src/banks/: apps.py  forms.py  mixins.py  models.py  selectors.py  services.py  urls.py  views.py
src/banks/migrations/: 0001_initial.py  0002_alter_bank_mfo_alter_bank_name.py
src/business_entities/: apps.py  forms.py  mixins.py  models.py  urls.py  views.py
src/business_entities/migrations/: 0001_initial.py  0002_alter_businessentities_address_and_more.py  0002_remove_businessentities_full_name_and_more.py
src/business_entities/templates/: business_entities.html
src/business_entities/templatetags/: business_entity_filters.py
src/config/: settings.py  urls.py
src/config/settings/: __init__.py  local.py  production.py
src/contracts/: apps.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
src/contracts/migrations/: 0001_initial.py  0002_alter_contracts_business_entities_and_more.py  0003_templates_business_entity_type.py  0004_contracts_name_contracts_path.py  0005_remove_templates_type_alter_templates_path.py  0006_remove_contracts_name_remove_contracts_path_and_more.py  0007_remove_templates_font.py  0008_alter_contracts_end_date_alter_contracts_start_date.py  0009_templates_template_type.py  0010_alter_contracts_business_entities.py
src/contracts/services/: converters.py  core.py  docx_editors.py  dto.py  formatters.py  interfaces.py
src/contracts/urls/: contracts_urls.py  (+1 more)
src/documents/: forms.py  mixins.py  models.py  services.py  urls.py  views.py
src/templates/: base.html  base_simple.html  error.html  home.html
src/users/: forms.py  models.py  urls.py  views.py
src/vehicles/: apps.py  forms.py  mixins.py  models.py  urls.py  views.py
tools/docker/: app.dockerfile
tools/linters/: .pre-commit-config.yaml
(+130 files in other folders)
