[tool.poetry]
name = "doc-simplifier"
version = "0.1.0"
description = ""
authors = ["Ivan Berestianyi <berestvania@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
python-docx = "^1.1.2"
python-docx-replace = "^0.4.4"
pymorphy3 = "^2.0.2"
pymorphy3-dicts-uk = "^2.4.1.1.1663094765"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
