[project]
name = "doc-simplifier"
version = "0.1.0"
description = ""
authors = [{ name = "Ivan Berestianyi", email = "berestvania@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "django>=5.1.3,<6",
    "python-dotenv>=1.0.1,<2",
    "psycopg2-binary>=2.9.10,<3",
    "python-docx>=1.1.2,<2",
    "python-docx-replace>=0.4.4,<0.5",
    "pymorphy3>=2.0.2,<3",
    "pymorphy3-dicts-uk>=2.4.1.1.1663094765,<3",
    "pypdf2>=3.0.1,<4",
    "gunicorn>=23.0.0",
    "celery>=5.5.0",
    "redis>=5.2.1",
    "flower>=2.0.1",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

да[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "flake8-import-order>=0.18.2",
    "flake8-print>=5.0.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "pre-commit-hooks>=5.0.0",
]
